loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:4: error: value += is not a member of Int
    if (estSurBiscuit) i+=1
                        ^Poucet1:8: error: not found: value sortieTrouve
} while (sortieTrouve()!) 
         ^